--- a/app/views/tutorials/edit.html.erb
+++ b/app/views/tutorials/edit.html.erb
@@ -1,7 +1,14 @@
-<h1>Tutorials#edit</h1>
-<p>Find me in app/views/tutorials/edit.html.erb</p>
-<%= video_tag @profile.movie.video.to_s %>
-<%= form_for @profile,url: tutorials_edit_path do |f| %>
-  <%= f.text_area :script %>
-  <%= f.submit "Go Home" %>
-<% end %>
+<div class="users-new-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-4 col-md-4 users-new-container">
+        <h1 class="text-center text-white">Check and Edit the script</h1>
+        <%= video_tag @profile.movie.video.to_s %>
+        <%= form_for @profile,url: tutorials_edit_path do |f| %>
+         <%= f.text_area :script %>
+         <%= f.submit "Go Home" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
