--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,15 @@
-<p>Hello <%= @email %>!</p>
-
-<% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
-<% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
-<% end %>
+<div class="users-new-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-4 col-md-4 users-new-container">
+        <h1 class="text-center text-white">Hello
+          <%= @email %>!</h1>
+        <% if @resource.try(:unconfirmed_email?) %>
+          <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+        <% else %>
+          <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
