--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="top-hero-wrapper text-center">
+  <div class="container top-hero-container">
+   <h1 class="text-white">Giving Is The Best Communication</h1>
+   <h2 class="text-white">TeDDY is a service that you can give & deliver your Presentation to the world.</h2>
+  <div class="row">
+      <div class="col-md-offset-3 col-md-3">
+        <%= link_to 'Watch', 'posts/show', class: 'btn btn-block btn-white' %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to 'Giving', 'tutorials/new',class: 'btn btn-block btn-white' %>
+      </div>
+  </div>
+</div>
