--- a/app/views/tutorials/new.html.erb
+++ b/app/views/tutorials/new.html.erb
@@ -1,8 +1,15 @@
-<h1>Tutorials#new</h1>
-<p>Find me in app/views/tutorials/new.html.erb</p>
-<%= form_for @profile, url: tutorials_edit_path do |f| %>
-  <%= f.fields_for :movie do |m| %>
-    <%= m.file_field :video %>
-  <% end %>
-  <%= f.submit "upload and edit the script" %>
-<% end %>
+<div class="users-new-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-4 col-md-4 users-new-container">
+        <h1 class="text-center text-white">Edit yourself present</h1>
+        <%= form_for @profile, url: tutorials_edit_path do |f| %>
+        <%= f.fields_for :movie do |m| %>
+         <%= m.file_field :video %>
+        <% end %>
+        <%= f.submit "UPload and Edit the script" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
