--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,13 +1,12 @@
-<div class="users-new-wrapper">
+<div class="devise-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Hello
-          <%= @resource.email %>!</h1>
-        <p>Someone has requested a link to change your password. You can do this through the link below.</p>
-        <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-        <p>If you didn't request this, please ignore this email.</p>
-        <p>Your password won't change until you access the link above and create a new one.</p>
+      <div class="col-md-offset-4 col-md-4 devise-new-container">
+        <h1 class="text-center text-white">Hello<%= @resource.email %>!</h1>
+        <p>Someone Has Requested A Link To Change Your Password. You Can Do This Through The Link Below.</p>
+        <p><%= link_to 'Change My Password', edit_password_url(@resource, reset_password_token: @token) %></p>
+        <p>If You Didn't Request This, Please Ignore This Email.</p>
+        <p>Your Password Won't Change Until You Access The Link Above And Create A New One.</p>
       </div>
     </div>
   </div>
