--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,8 @@
-<div class="users-new-wrapper">
+<div class="devise-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">
-        <%= link_to 'Edit', resource_name.to_s.humanize %>
-        </h1>
+      <div class="col-md-offset-4 col-md-4 devise-new-container">
+        <h1 class="text-center text-white"><%= link_to 'Edit', resource_name.to_s.humanize %></h1>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= devise_error_messages! %>
           <div class="field">
@@ -12,10 +10,10 @@
            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
          </div>
          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <div>Currently Waiting Confirmation For: <%= resource.unconfirmed_email %></div>
          <% end %>
          <div class="field">
-           <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+           <%= f.label :password %> <i>(Leave Blank If You Don't Want To Change It)</i><br />
            <%= f.password_field :password, autocomplete: "off" %>
            <% if @minimum_password_length %>
            <br />
@@ -27,15 +25,15 @@
           <%= f.password_field :password_confirmation, autocomplete: "off" %>
          </div>
          <div class="field">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+          <%= f.label :current_password %> <i>(We Need Your Current Password To Confirm Your Changes)</i><br />
           <%= f.password_field :current_password, autocomplete: "off" %>
          </div>
          <div class="actions">
           <%= f.submit "Update" %>
          </div>
        <% end %>
-       <h3>Cancel my account</h3>
-       <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+       <h3>Cancel My Account</h3>
+       <p>Unhappy? <%= button_to "Cancel My Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
        <%= link_to "Back", :back %>
       </div>
     </div>
