--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,14 @@
-<div class="users-new-wrapper">
+<div class="posts-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Edit yourself present</h1>
+      <div class="col-md-offset-4 col-md-4 posts-new-container">
+        <h1 class="text-center text-white">Giving</h1>
         <%= form_for @post, url: posts_create_path do |f| %>
-        <%= f.fields_for :movie do |m| %>
-         <%= m.file_field :video %>
-        <% end %>
-        <%= f.submit "UPload and Edit the script" %>
-        <% end %>
+               <%= f.fields_for :movie do |m| %>
+                 <%= m.file_field :video %>
+               <% end %>
+               <%= f.submit "Check Your Pressentation" %>
+            <% end %>
       </div>
     </div>
   </div>
