--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,12 @@
-<div class="users-new-wrapper">
+<div class="posts-show-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Check and Edit the script</h1>
+      <div class="col-md-offset-4 col-md-4 posts-show-container">
+        <h1 class="text-right text-white">Giving World Your Presentation</h1>
         <%= video_tag @post.movie.video.to_s, controls: true %>
         <%= @post.title %>
         <%= @post.script %>
+        <%= link_to 'Presentation List', posts_index_path, class: 'btn btn-block btn-white' %>
       </div>
     </div>
   </div>
