--- a/app/views/tutorials/edit.html.erb
+++ b/app/views/tutorials/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="users-new-wrapper">
+<div class="tutorials-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Check and Edit the script</h1>
+      <div class="col-md-offset-4 col-md-4 tutorials-new-container">
+        <h1 class="text-center text-white">Check The Pressentation About Yourself</h1>
         <%= video_tag @profile.movie.video.to_s %>
         <%= form_for @profile,url: tutorials_edit_path do |f| %>
          <%= f.text_area :script %>
