--- a/app/views/tutorials/new.html.erb
+++ b/app/views/tutorials/new.html.erb
@@ -1,13 +1,13 @@
-<div class="users-new-wrapper">
+<div class="tutorials-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Edit yourself present</h1>
+      <div class="col-md-offset-4 col-md-4 tutorials-new-container">
+        <h1 class="text-center text-white">Check The Pressentation About Yourself</h1>
         <%= form_for @profile, url: tutorials_edit_path do |f| %>
         <%= f.fields_for :movie do |m| %>
          <%= m.file_field :video %>
         <% end %>
-        <%= f.submit "UPload and Edit the script" %>
+        <%= f.submit "Upload And Edit The Script" %>
         <% end %>
       </div>
     </div>
