--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,11 +9,14 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *= require_tree .
+ *= require devise_bootstrap_views
  *= require_self
+ *= require_tree .
  */
-
-
-@import 'pages';
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'devise_bootstrap_views';
+@import 'devise';
+@import 'pages';
+@import 'posts';
+@import 'tutorials';
