--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,10 +1,3 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-h1, h2 {
-  font-weight: 100;
-}
-
 .header{
   padding: 50px 0 0 50px;
   height: 100px;
@@ -18,50 +11,7 @@ h1, h2 {
   }
 }
 
-.text-white {
-  color: #000;
-}
-
-.btn-white {
-  color: #fff;
-  border: 1px solid #fff;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  font-size: 20px;
-  background-color: rgba(0,0,0,0.7);
-
-  &:hover {
-    color: #000;
-  }
-}
-
 .top-hero-wrapper {
-  width: 100vw;
-  height: 100vh;
-  background: image-url('icons/top.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: #464646;
-}
-
-.top-hero-container {
-  padding-top: 500px;
-  h1 {
-    font-size: 56px;
-    margin-bottom: 20px;
-  }
-
-  h2 {
-    margin-bottom: 45px;
-  }
-}
-.form-control {
-  height: 100px;
-}
-
-.users-new-wrapper {
   width: 100vw;
   height: 100vh;
   background-image: image-url('icons/top.png');
@@ -71,11 +21,32 @@ h1, h2 {
   background-size: cover;
   background-color: #fff;
 
-  .users-new-container {
-    //padding-top: 400px;
+  .top-hero-container {
+    padding-top: 400px;
 
-    .form-group {
+    .text-white {
+      color: #000;
+    }
+
+
+    h1 {
+      font-size: 56px;
       margin-bottom: 20px;
+      font-weight: 100px;
+    }
+
+    h2 {
+      margin-bottom: 60px;
+      font-weight: 100px;
+    }
+
+  .btn-white {
+    color: #fff;
+    border: 1px solid #fff;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 20px;
+    background-color: rgba(0,0,0,0.7);
     }
   }
 }
