--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,20 +1,23 @@
-<div class="users-new-wrapper">
+<div class="devise-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Resend confirmation instructions</h1>
-        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+      <div class="col-md-offset-4 col-md-4 devise-new-container">
+        <h1 class="text-center text-white">Resend Confirmation Instructions</h1>
+
          <%= devise_error_messages! %>
+
          <div class="field">
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
          </div>
+
          <div class="actions">
-           <%= f.submit "Resend confirmation instructions" %>
+          <%= f.submit "Resend confirmation instructions" %>
          </div>
         <% end %>
+
         <%= render "devise/shared/links" %>
       </div>
-    </div>
-  </div>
-</div>
+     </div>
+   </div>
+ </div>
