--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,10 +1,9 @@
-<div class="users-new-wrapper">
+<div class="devise-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Hello
-          <%= @resource.email %>!</h1>
-        <p>We're contacting you to notify you that your password has been changed.</p>
+      <div class="col-md-offset-4 col-md-4 devise-new-container">
+        <h1 class="text-center text-white">Hello<%= @resource.email %>!</h1>
+        <p>We're Contacting You To Notify You That Your Password Has Been Changed.</p>
       </div>
     </div>
   </div>
