--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,12 +1,11 @@
-<div class="users-new-wrapper">
+<div class="devise-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Hello
-          <%= @resource.email %>!</h1>
-        <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
-        <p>Click the link below to unlock your account:</p>
-        <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+      <div class="col-md-offset-4 col-md-4 devise-new-container">
+        <h1 class="text-center text-white">Hello<%= @resource.email %>!</h1>
+        <p>Your Account Has Been Locked Due To An Excessive Number Of Unsuccessful Sign In Attempts.</p>
+        <p>Click The Link Below To Unlock Your Account:</p>
+        <p><%= link_to 'Unlock My Account', unlock_url(@resource, unlock_token: @token) %></p>
       </div>
     </div>
   </div>
