--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,24 +1,24 @@
-<div class="users-new-wrapper">
+<div class="devise-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Change your password</h1>
+      <div class="col-md-offset-4 col-md-4 devise-new-container">
+        <h1 class="text-center text-white">Change Your Password</h1>
         <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
         <%= f.hidden_field :reset_password_token %>
         <div class="field">
-         <%= f.label :password, "New password" %><br />
+         <%= f.label :password, "New Password" %><br />
          <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em><br />
          <% end %>
          <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
        </div>
        <div class="field">
-         <%= f.label :password_confirmation, "Confirm new password" %><br />
+         <%= f.label :password_confirmation, "Confirm New Password" %><br />
          <%= f.password_field :password_confirmation, autocomplete: "off" %>
        </div>
        <div class="actions">
-         <%= f.submit "Change my password" %>
+         <%= f.submit "Change My Password" %>
        </div>
      <% end %>
      <%= render "devise/shared/links" %>
