--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,8 +1,8 @@
-<div class="users-new-wrapper">
+<div class="devise-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">Forget your password</h1>
+      <div class="col-md-offset-4 col-md-4 devise-new-container">
+        <h1 class="text-center text-white">Forget Your Password</h1>
          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
          <%= devise_error_messages! %>
        <div class="field">
@@ -10,7 +10,7 @@
          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
        </div>
       <div class="actions">
-         <%= f.submit "Send me reset password instructions" %>
+         <%= f.submit "Send Me Reset Password Instructions" %>
       </div>
      <% end %>
      <%= render "devise/shared/links" %>
