--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
-<div class="users-new-wrapper">
+<div class="devise-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">sign UP</h1>
+      <div class="col-md-offset-4 col-md-4 devise-new-container">
+        <h1 class="text-center text-white">Sign Up</h1>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
          <%= devise_error_messages! %>
          <div class="field">
@@ -21,7 +21,7 @@
           <%= f.password_field :password_confirmation, autocomplete: "off" %>
          </div>
          <div class="actions">
-           <%= f.submit "sign UP" %>
+           <%= f.submit "Sign Up" %>
          </div>
         <% end %>
         <%= render "devise/shared/links" %>
