--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,12 +2,13 @@
   <div class="container top-hero-container">
    <h1 class="text-white">Giving Is The Best Communication</h1>
    <h2 class="text-white">TeDDY is a service that you can give & deliver your Presentation to the world.</h2>
-  <div class="row">
+   <div class="row">
       <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'Watch', 'posts/show', class: 'btn btn-block btn-white' %>
+        <%= link_to 'Watch', 'posts/index', class: 'btn btn-block btn-white' %>
       </div>
       <div class="col-md-3">
-        <%= link_to 'Giving', 'tutorials/new',class: 'btn btn-block btn-white' %>
+        <%= link_to 'Giving', 'posts/new', class: 'btn btn-block btn-white' %>
       </div>
+    </div>
   </div>
 </div>
