--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,18 @@
-<h1 class="text-center text-white">All video</h1>
-<% @posts.each do |post| %>
-  <p>
-    <%= link_to posts_show_path(post) do %>
-      <%= video_tag post.movie.video.to_s if post.movie.present? %>
-    <% end %>
-  </p>
-  <% end %>
+<div class="posts-index-wrapper">
+  <div class="container">
+   <h1 class="text-center text-white">Pressentation List</h1>
+    <div class="row">
+      <% @posts.each do |post| %>
+        <% next if post.movie.blank? %>
+
+        <div class="posts-index-container">
+            <%= post.title %>
+            <%= post.script %>
+            <%= link_to posts_show_path(post) do %>
+            <%= video_tag post.movie.video.to_s %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+   </div>
+ </div>
