--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -14,7 +14,7 @@
 .top-hero-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: image-url('icons/top.png');
+  background-image: image-url('icons/top1.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -25,7 +25,7 @@
     padding-top: 400px;
 
     .text-white {
-      color: #000;
+      color: #fff;
     }
 
 
@@ -46,7 +46,7 @@
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 20px;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.0);
     }
   }
 }
