--- a/app/assets/stylesheets/tutorials.scss
+++ b/app/assets/stylesheets/tutorials.scss
@@ -1,7 +1,7 @@
-.tutorialts-new-wrapper {
+.tutorials-new-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: image-url('icons/top.png');
+  background-image: image-url('icons/top2.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
