--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
           <%= f.password_field :password_confirmation, autocomplete: "off" %>
          </div>
          <div class="actions">
-           <%= f.submit "Sign Up" %>
+           <%= f.submit "Please Introduce Yourself" %>
          </div>
         <% end %>
         <%= render "devise/shared/links" %>
