--- a/app/views/tutorials/new.html.erb
+++ b/app/views/tutorials/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 tutorials-new-container">
-        <h1 class="text-center text-white">Check The Pressentation About Yourself</h1>
+        <h1 class="text-center text-white">Please Introduce</h1>
         <%= form_for @profile, url: tutorials_edit_path do |f| %>
         <%= f.fields_for :movie do |m| %>
          <%= m.file_field :video %>
