--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,18 +6,18 @@ video {
   width: 100vw;
   height: 100vh;
   padding-top: 300px;
-  background-image: image-url('icons/top.png');
+  background-image: image-url('icons/top2.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size:　200px 600px;
+  background-size: cover;
   background-color: #fff;
 
   .posts-new-container {
     padding-top: 100px;
 
     .text-white {
-      color: #000;
+      color: #fff;
     }
 
     h1 {
@@ -33,10 +33,10 @@ video {
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 20px;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.0);
 
     &:hover {
-      color: #000;
+      color: #fff;
     }
    }
   }
@@ -46,11 +46,11 @@ video {
   width: 100vw;
   height: auto;
   padding: 15px;
-  background-image: image-url('icons/top.png');
+  background-image: image-url('icons/top2.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size:　200px 600px;
+  background-size: cover;
   background-color: #fff;
 
   .container {
@@ -58,7 +58,7 @@ video {
 
 
   .text-white {
-    color: #000;
+    color: #fff;
   }
 
   h1 {
@@ -78,10 +78,10 @@ video {
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 20px;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.0);
 
     &:hover {
-      color: #000;
+      color: #fff;
     }
    }
   }
@@ -90,18 +90,18 @@ video {
 .posts-edit-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: image-url('icons/top.png');
+  background-image: image-url('icons/top2.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size:　200px 600px;
+  background-size: cover;
   background-color: #fff;
 
   .posts-edit-container {
     padding-top: 100px;
 
     .text-white {
-      color: #000;
+      color: #fff;
     }
 
     h1 {
@@ -117,10 +117,10 @@ video {
       padding-top: 15px;
       padding-bottom: 15px;
       font-size: 20px;
-      background-color: rgba(0,0,0,0.7);
+      background-color: rgba(0,0,0,0.0);
 
       &:hover {
-        color: #000;
+        color: #fff;
       }
      }
     }
@@ -129,18 +129,18 @@ video {
 .posts-show-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: image-url('icons/top.png');
+  background-image: image-url('icons/top2.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size:　200px 600px;
+  background-size: cover;
   background-color: #fff;
 
   .posts-show-container {
     padding-top: 100px;
 
     .text-white {
-      color: #000;
+      color: #fff;
     }
 
     h1 {
@@ -155,10 +155,10 @@ video {
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 20px;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.0);
 
     &:hover {
-      color: #000;
+      color: #fff;
     }
    }
   }
