--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="top-hero-wrapper text-center">
   <div class="container top-hero-container">
    <h1 class="text-white">Giving Is The Best Communication</h1>
-   <h2 class="text-white">TeDDY is a service that you can give & deliver your Presentation to the world.</h2>
+   <h2 class="text-white">UKA is a service that you can give & deliver world　your　presentation.</h2>
    <div class="row">
       <div class="col-md-offset-3 col-md-3">
         <%= link_to 'Watch', 'posts/index', class: 'btn btn-block btn-white' %>
