mail sending implementation

--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white">Hello<%= @email %>!</h1>
+        <h1 class="text-center text-white">Hello, we are UKA.<%= @email %>!</h1>
         <% if @resource.try(:unconfirmed_email?) %>
           <p>We're Contacting You To Notify You That Your Email Is Being Changed To <%= @resource.unconfirmed_email %>.</p>
         <% else %>
