--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white"><%= link_to 'Edit', resource_name.to_s.humanize %></h1>
+        <h1 class="text-white">UKA</h1>
+        <header class="text-white"><%= link_to 'Edit', resource_name.to_s.humanize %></header>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= devise_error_messages! %>
           <div class="field">
