--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,10 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 posts-show-container">
-        <h1 class="text-right text-white">Giving World Your Presentation</h1>
+        <h1 class="text-white">Giving World Your Presentation</h1>
         <%= video_tag @post.movie.video.to_s, controls: true %>
+        <div style="color:white">Title:
         <%= @post.title %>
+       </div>
+        <div style="color:white">Script:
         <%= @post.script %>
+       </div>
         <%= link_to 'Presentation List', posts_index_path, class: 'btn btn-block btn-white' %>
       </div>
     </div>
