--- a/app/views/tutorials/edit.html.erb
+++ b/app/views/tutorials/edit.html.erb
@@ -1,12 +1,17 @@
-<div class="tutorials-new-wrapper">
+<div class="tutorials-edit-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 tutorials-new-container">
-        <h1 class="text-center text-white">Check The Pressentation About Yourself</h1>
+      <div class="col-md-offset-4 col-md-4 tutorials-edit-container">
+        <h1 class="text-center text-white">Comfirmation</h1>
         <%= video_tag @profile.movie.video.to_s %>
         <%= form_for @profile,url: tutorials_edit_path do |f| %>
-         <%= f.text_area :script %>
-         <%= f.submit "Go Home" %>
+        <div style="color:white">Title
+        <%= f.text_field :title, class: 'btn btn-block btn-white' %>
+        </div>
+        <div style="color:white">Script
+        <%= f.text_area :script, class: 'btn btn-block btn-white' %>
+        </div>
+        <%= f.submit "Give The World Your Presentation" %>
         <% end %>
       </div>
     </div>
