--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,7 +1,9 @@
+@media screen and (min-width:920px){
+  /*920px以上で適用する内容*/
 .devise-new-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: image-url('icons/top1.png');
+  background-image: image-url('icons/top.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -13,29 +15,25 @@
    }
 
   .text-white {
-    color: #fff;
     font-size: 30px;
+    color: #fff;
    }
 
    h1 {
      font-weight: 100px;
    }
 
-  .text-center {
-    text-align: left;
-  }
-
-
   .btn-white {
     color: #fff;
-    border: 1px solid #fff;
+    border: 1px solid;
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 20px;
     background-color: rgba(0,0,0,0.0);
 
-   &:hover {
-    color: #fff;
+    &:hover {
+          color: #fff;
     }
    }
-  }
+ }
+}
