--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -2,8 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white">Resend Confirmation Instructions</h1>
-
+        <h1  class="text-white">UKA</h1>
+        <header class="text-white">Resend Confirmation Instructions</header>
+         <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
          <%= devise_error_messages! %>
 
          <div class="field">
@@ -14,8 +15,8 @@
          <div class="actions">
           <%= f.submit "Resend confirmation instructions" %>
          </div>
-        <% end %>
 
+         <% end %>
         <%= render "devise/shared/links" %>
       </div>
      </div>
