--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white">Change Your Password</h1>
+        <h1 class="text-white">UKA</h1>
+        <header class="text-white">Change Your Password</header>
         <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
         <%= f.hidden_field :reset_password_token %>
