--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,32 @@
 <div class="devise-new-wrapper">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white">Sign Up</h1>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-         <%= devise_error_messages! %>
-         <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-         </div>
-         <div class="field">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off" %>
-         </div>
-         <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off" %>
-         </div>
-         <div class="actions">
-           <%= f.submit "Please Introduce Yourself" %>
-         </div>
-        <% end %>
-        <%= render "devise/shared/links" %>
-     </div>
-    </div>
+　<div class="container">
+   <div class="row">
+    <div class="col-md-offset-4 col-md-4 devise-new-container">
+      <h1 class="text-white">UKA</h1>
+      <header class="text-white">Sign Up</header>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+       <%= devise_error_messages! %>
+       <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+       </div>
+       <div class="field">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "off" %>
+       </div>
+       <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+       </div>
+       <div class="actions">
+         <%= f.submit "Please Introduce Yourself" %>
+       </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
+   </div>
   </div>
+ </div>
 </div>
