--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,9 @@
-<div class="top-hero-wrapper text-center">
+<div class="top-hero-wrapper">
   <div class="container top-hero-container">
-   <h1 class="text-white">Giving Is The Best Communication.</h1>
-   <h2 class="text-white">UKA is a service that you can give & deliver world your presentation.</h2>
+   <h1 class="text-white text-center">Giving Is The Best Communication.</h1>
+   <h2 class="text-white text-center">UKA is a service that you can give the world your presentation.</h2>
    <div class="row">
-      <div class="col-md-offset-3 col-md-3">
+      <div class="col-md-offset-3 col-md-3" style="color:white">
         <%= link_to 'Watch', 'posts/index', class: 'btn btn-block btn-white' %>
       </div>
       <div class="col-md-3">
