スマホ対応2

--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white">Hello, we are UKA.<%= @resource.email %>!</h1>
+        <h1 class="text-center text-white">We Are UKA.<%= @resource.email %>!</h1>
         <p>We're Contacting You To Notify You That Your Password Has Been Changed.</p>
       </div>
     </div>
