--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,7 +30,7 @@
           <%= f.password_field :current_password, autocomplete: "off" %>
          </div>
          <div class="actions">
-          <%= f.submit "Update" %>
+          <%= f.submit "Check Out" %>
          </div>
        <% end %>
        <h3>Cancel My Account</h3>
