--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="posts-index-wrapper">
   <div class="container">
-   <h1 class="text-center text-white">Presentation List</h1>
+   <h1 class="text-center text-white">UKA</h1>
     <div class="row">
       <% @posts.each do |post| %>
         <% next if post.movie.blank? %>
