--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 posts-show-container">
-        <h1 class="text-white">Giving World Your Presentation</h1>
+        <h1 class="text-white">Final Confirmation</h1>
         <%= video_tag @post.movie.video.to_s, controls: true %>
         <div style="color:white">Title:
         <%= @post.title %>
@@ -10,7 +10,7 @@
         <div style="color:white">Script:
         <%= @post.script %>
        </div>
-        <%= link_to 'Presentation List', posts_index_path, class: 'btn btn-block btn-white' %>
+        <%= link_to 'Check Out', posts_index_path, class: 'btn btn-block btn-white' %>
       </div>
     </div>
   </div>
