--- a/app/assets/stylesheets/tutorials.mobile.scss
+++ b/app/assets/stylesheets/tutorials.mobile.scss
@@ -23,6 +23,11 @@
         margin-bottom: 20px;
         font-weight: 100px;
       }
+      h2 {
+        margin-bottom: 60px;
+        font-weight: 100px;
+        font-size: 15px;
+      }
     }
 
     .btn-white {
