--- a/app/assets/stylesheets/tutorials.scss
+++ b/app/assets/stylesheets/tutorials.scss
@@ -1,8 +1,9 @@
 @media screen and (min-width:920px){
   /*920px以上で適用する内容*/
+
 .tutorila-new-wrapper {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   padding-top: 300px;
   background-image: image-url('icons/top.png');
   background-position: center center;
@@ -37,4 +38,45 @@
     }
   }
  }
+.tutorila--wrapper {
+ width: 100vw;
+ height: auto;
+ padding-top: 300px;
+ background-image: image-url('icons/top.png');
+ background-position: center center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
+ background-size: cover;
+ background-color: #fff;
+
+ .tutorials-new-container {
+   padding-top: 100px;
+
+   .text-white {
+     color: #fff;
+   }
+
+   h1 {
+     font-size: 56px;
+     margin-bottom: 20px;
+     font-weight: 100px;
+   }
+   h2 {
+     margin-bottom: 60px;
+     font-weight: 100px;
+   }
+ }
+
+ .btn-white {
+   border: 1px solid #fff;
+   padding-top: 15px;
+   padding-bottom: 15px;
+   font-size: 20px;
+   background-color: rgba(0,0,0,0.0);
+
+   &:hover {
+     color: #fff;
+   }
+ }
+}
 }
