--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white">Hello, we are UKA.<%= @resource.email %>!</h1>
+        <h1 class="text-center text-white">We Are UKA.<%= @resource.email %>!</h1>
         <p>Someone Has Requested A Link To Change Your Password. You Can Do This Through The Link Below.</p>
         <p><%= link_to 'Change My Password', edit_password_url(@resource, reset_password_token: @token) %></p>
         <p>If You Didn't Request This, Please Ignore This Email.</p>
