--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white">Hello, we are UKA.<%= @resource.email %>!</h1>
+        <h1 class="text-center text-white">We Are UKA.<%= @resource.email %>!</h1>
         <p>Your Account Has Been Locked Due To An Excessive Number Of Unsuccessful Sign In Attempts.</p>
         <p>Click The Link Below To Unlock Your Account:</p>
         <p><%= link_to 'Unlock My Account', unlock_url(@resource, unlock_token: @token) %></p>
