--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -19,7 +19,7 @@
          <%= f.password_field :password_confirmation, autocomplete: "off" %>
        </div>
        <div class="actions">
-         <%= f.submit "Change My Password" %>
+         <%= f.submit "Check Out" %>
        </div>
      <% end %>
      <%= render "devise/shared/links" %>
