--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
        </div>
        <div class="actions">
-         <%= f.submit "Please Introduce Yourself" %>
+         <%= f.submit "Check Out" %>
        </div>
       <% end %>
       <%= render "devise/shared/links" %>
