--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -11,7 +11,7 @@
          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
        </div>
        <div class="actions">
-         <%= f.submit "Resend Unlock Instructions" %>
+         <%= f.submit "Check Out" %>
        </div>
       <% end %>
       <%= render "devise/shared/links" %>
