--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 posts-new-container">
-        <h1 class="text-center text-white">Check Out</h1>
+        <h1 class="text-center text-white">1st Comfirmation</h1>
         <%= form_for @post, url: posts_create_path do |f| %>
                <%= f.fields_for :movie do |m| %>
                  <%= m.file_field :video %>
                <% end %>
-          <%= f.submit "Give Your Presentation" %>
+          <%= f.submit "Check Out" %>
             <% end %>
       </div>
     </div>
