--- a/app/views/tutorials/new.html.erb
+++ b/app/views/tutorials/new.html.erb
@@ -2,12 +2,19 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 tutorials-new-container">
-        <h1 class="text-center text-white">Please Introduce Youself.</h1>
+        <h1 class="text-center text-white">Please Introduce Youself</h1>
+　　　　　<h2 class="text-center text-white">
+           For example...<br>
+            .Name<br>
+            .Country<br>
+            .Object<br>
+             etc...<br>
+        </h2>
         <%= form_for @profile, url: tutorials_edit_path do |f| %>
         <%= f.fields_for :movie do |m| %>
          <%= m.file_field :video %>
         <% end %>
-        <%= f.submit "Check Out Your Presentation" %>
+        <%= f.submit "Check Out" %>
         <% end %>
       </div>
     </div>
